--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://castillodaniel1:0ed9AIjIgSeWfWDB@cluster0.grwezmb.mongodb.net/capstone?retryWrites=true&w=majority&appName=Cluster0"
+
+PORT=3000
