--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
